Update to discord js 14 and first command running

--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-	"prefix": "&"
+	"laNalGuildId": "559721067590189067",
+	"botApplicationId": "697841721459081347",
+	"botRadioBoomBoomChanId": "688040488019820598"
 }
