--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "ndeman",
   "dependencies": {
+    "better-sqlite3": "^9.4.1",
     "discord.io": "github:woor/discord.io#gateway_v6",
     "discord.js": "^14.14.1",
     "quick.db": "^9.1.7",
