add wrap server and BL command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
 	"laNalGuildId": "559721067590189067",
+	"wrapGuildId": "982250385815248906",
 	"botApplicationId": "697841721459081347",
 	"botRadioBoomBoomChanId": "688040488019820598"
 }
