add basic join and disconnect command for voice channel

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "author": "ndeman",
   "dependencies": {
+    "@discordjs/voice": "^0.16.1",
     "better-sqlite3": "^9.4.1",
     "discord.io": "github:woor/discord.io#gateway_v6",
     "discord.js": "^14.14.1",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13",
     "quick.db": "^9.1.7",
     "winston": "^3.11.0"
   },
